--- a/veoc/templates/veoc/airport_register.html
+++ b/veoc/templates/veoc/airport_register.html
@@ -49,7 +49,7 @@
                     <div class="form-row" id="country_details_div">
                        <div class="form-group col-md-4">
                          <label for="nationality">Nationality : *</label>
-                         <select class="form-control" name="nationality" id="nationality">
+                         <select class="form-control" name="nationality" id="nationality" required>
                               <option value="" disabled selected>Select Nationality</option>
                               {% for cntry in country %}
                                   <option value="{{cntry.name}}">{{cntry.name}}</option>
@@ -58,7 +58,7 @@
                        </div>
                        <div class="form-group col-md-4">
                          <label for="country">Country of Origin : *</label>
-                         <select class="form-control" name="country" id="country" onchange="region_filter()">
+                         <select class="form-control" name="country" id="country" onchange="region_filter()" required>
                               <option value="" disabled selected>Select Country</option>
                               {% for cntry in country %}
                                   <option value="{{cntry.name}}">{{cntry.name}}</option>
@@ -109,16 +109,16 @@
                     </div>
                      <div class="form-row" id="diagnosis_status_div">
                        <div class="form-group col-md-4">
-                         <label for="airline">Airline : </label>
-                         <input class="form-control" type="text" id="airline" name="airline" size="45" placeholder="Airline"/>
+                         <label for="airline">Airline :* </label>
+                         <input class="form-control" type="text" id="airline" name="airline" size="45" placeholder="Airline" required/>
                        </div>
                        <div class="form-group col-md-4">
-                         <label for="flight_number">Flight Number : </label>
-                         <input class="form-control" type="text" id="flight_number" name="flight_number" size="45" placeholder="Flight Number"/>
+                         <label for="flight_number">Flight Number :* </label>
+                         <input class="form-control" type="text" id="flight_number" name="flight_number" size="45" placeholder="Flight Number" required/>
                        </div>
                        <div class="form-group col-md-4">
-                         <label for="seat_number">Seat Number : </label>
-                         <input class="form-control" type="text" id="seat_number" name="seat_number" size="45" placeholder="Seat Number"/>
+                         <label for="seat_number">Seat Number :* </label>
+                         <input class="form-control" type="text" id="seat_number" name="seat_number" size="45" placeholder="Seat Number" required/>
                        </div>
                      </div>
                      <div class="form-row" id="diagnosis_status_div">
@@ -129,15 +129,15 @@
                        <div class="form-group col-md-4">
                          <label for="countries_visited">Countries Visited : </label>
                          <select class="form-control" name="countries_visited" id="countries_visited">
-                              <option value="" disabled selected>Select County</option>
+                              <option value="" disabled selected>Select Country</option>
                               {% for cntry in country %}
                                   <option value="{{cntry.name}}">{{cntry.name}}</option>
                               {% endfor %}
                           </select></div>
                        <div class="form-group col-md-4">
-                         <label for="fever">Fever (37.5°C or higher): </label>
-                         <select class="form-control" id="fever" name="fever">
-                             <option style="display:none">Select</option>
+                         <label for="fever">Fever (37.5°C or higher):* </label>
+                         <select class="form-control" id="fever" name="fever" required>
+                             <option style="display:none">Select Option</option>
                              <option value="t">Yes</option>
                              <option value="f">No</option>
                        </select>
@@ -145,33 +145,33 @@
                     </div>
                     <div class="form-row" id="country_details_div">
                       <div class="form-group col-md-3">
-                        <label for="feverish">Feverish : </label>
-                        <select class="form-control" id="feverish" name="feverish">
-                            <option style="display:none">Select</option>
+                        <label for="feverish">Feverish :* </label>
+                        <select class="form-control" id="feverish" name="feverish" required>
+                            <option style="display:none">Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
                       </div>
                       <div class="form-group col-md-3">
-                        <label for="chills">Chills : </label>
-                        <select class="form-control" id="chills" name="chills">
-                            <option style="display:none">Select</option>
+                        <label for="chills">Chills :* </label>
+                        <select class="form-control" id="chills" name="chills" required>
+                            <option style="display:none">Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
                       </div>
                       <div class="form-group col-md-3">
-                        <label for="cough">Cough : </label>
-                        <select class="form-control" id="cough" name="cough">
-                            <option style="display:none">Select</option>
+                        <label for="cough">Cough :* </label>
+                        <select class="form-control" id="cough" name="cough" required>
+                            <option style="display:none">Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
                       </div>
                       <div class="form-group col-md-3">
-                        <label for="breathing_difficulty">Difficulty in breathing : </label>
-                        <select class="form-control" id="breathing_difficulty" name="breathing_difficulty">
-                            <option style="display:none">Select</option>
+                        <label for="breathing_difficulty">Difficulty in breathing :* </label>
+                        <select class="form-control" id="breathing_difficulty" name="breathing_difficulty" required>
+                            <option style="display:none">Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
@@ -203,35 +203,35 @@
                     </div>
                     <div class="form-row" id="country_details_div">
                       <div class="form-group col-md-6">
-                        <label for="measured_temperature">Measured Temperature : </label>
-                        <input class="form-control" type=number step=0.01 id="measured_temperature" name="measured_temperature" onchange="checkTemp()" maxlength="5" placeholder="Measured Temperature"/>
+                        <label for="measured_temperature">Measured Temperature :* </label>
+                        <input class="form-control" type=number step=0.01 id="measured_temperature" name="measured_temperature" onchange="checkTemp()" maxlength="5" placeholder="Measured Temperature" required>
                       </div>
                       <div class="form-group col-md-6">
-                        <label for="arrival_airport_code">Arrival Airport Code : </label>
-                        <input class="form-control" type="text" id="arrival_airport_code" name="arrival_airport_code" placeholder="Arrival Airport Code"/>
+                        <label for="arrival_airport_code">Arrival Airport Code :* </label>
+                        <input class="form-control" type="text" id="arrival_airport_code" name="arrival_airport_code" placeholder="Arrival Airport Code" required/>
                       </div>
                    </div>
                    <div class="form-row" id="save_div">
                    <div class="form-group col-md-4">
-                     <label for="released">Released : </label>
-                     <select class="form-control" id="released" name="released">
-                         <option style="display:none">Select</option>
+                     <label for="released">Released :* </label>
+                     <select class="form-control" id="released" name="released" required>
+                         <option style="display:none">Select Option</option>
                          <option value="t">Yes</option>
                          <option value="f">No</option>
                    </select>
                    </div>
                    <div class="form-group col-md-4">
                      <label for="risk_assessment_referal">Risk Assesment Referral : </label>
-                       <select class="form-control" id="risk_assessment_referal" name="risk_assessment_referal">
-                           <option style="display:none">Select</option>
+                       <select class="form-control" id="risk_assessment_referal" name="risk_assessment_referal" required>
+                           <option style="display:none">Select Option</option>
                            <option value="t">Yes</option>
                            <option value="f">No</option>
                      </select>
                    </div>
                    <div class="form-group col-md-4">
                      <label for="designated_hospital_referal">Designated Hospital Referral  : </label>
-                     <select class="form-control" id="designated_hospital_referal" name="designated_hospital_referal">
-                       <option style="display:none">Select</option>
+                     <select class="form-control" id="designated_hospital_referal" name="designated_hospital_referal" required>
+                       <option style="display:none">Select Option</option>
                        <option value="t">Yes</option>
                        <option value="f">No</option>
                  </select>
