--- a/veoc/templates/veoc/airport_register.html
+++ b/veoc/templates/veoc/airport_register.html
@@ -137,7 +137,7 @@
                        <div class="form-group col-md-4">
                          <label for="fever">Fever (37.5°C or higher):* </label>
                          <select class="form-control" id="fever" name="fever" required>
-                             <option style="display:none">Select Option</option>
+                             <option value="" disabled selected>Select Option</option>
                              <option value="t">Yes</option>
                              <option value="f">No</option>
                        </select>
@@ -147,7 +147,7 @@
                       <div class="form-group col-md-3">
                         <label for="feverish">Feverish :* </label>
                         <select class="form-control" id="feverish" name="feverish" required>
-                            <option style="display:none">Select Option</option>
+                            <option value="" disabled selected>Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
@@ -155,7 +155,7 @@
                       <div class="form-group col-md-3">
                         <label for="chills">Chills :* </label>
                         <select class="form-control" id="chills" name="chills" required>
-                            <option style="display:none">Select Option</option>
+                            <option value="" disabled selected>Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
@@ -163,7 +163,7 @@
                       <div class="form-group col-md-3">
                         <label for="cough">Cough :* </label>
                         <select class="form-control" id="cough" name="cough" required>
-                            <option style="display:none">Select Option</option>
+                            <option value="" disabled selected>Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
@@ -171,7 +171,7 @@
                       <div class="form-group col-md-3">
                         <label for="breathing_difficulty">Difficulty in breathing :* </label>
                         <select class="form-control" id="breathing_difficulty" name="breathing_difficulty" required>
-                            <option style="display:none">Select Option</option>
+                            <option value="" disabled selected>Select Option</option>
                             <option value="t">Yes</option>
                             <option value="f">No</option>
                       </select>
@@ -215,7 +215,7 @@
                    <div class="form-group col-md-4">
                      <label for="released">Released :* </label>
                      <select class="form-control" id="released" name="released" required>
-                         <option style="display:none">Select Option</option>
+                         <option value="" disabled selected>Select Option</option>
                          <option value="t">Yes</option>
                          <option value="f">No</option>
                    </select>
@@ -223,7 +223,7 @@
                    <div class="form-group col-md-4">
                      <label for="risk_assessment_referal">Risk Assesment Referral : </label>
                        <select class="form-control" id="risk_assessment_referal" name="risk_assessment_referal" required>
-                           <option style="display:none">Select Option</option>
+                           <option value="" disabled selected>Select Option</option>
                            <option value="t">Yes</option>
                            <option value="f">No</option>
                      </select>
@@ -231,7 +231,7 @@
                    <div class="form-group col-md-4">
                      <label for="designated_hospital_referal">Designated Hospital Referral  : </label>
                      <select class="form-control" id="designated_hospital_referal" name="designated_hospital_referal" required>
-                       <option style="display:none">Select Option</option>
+                       <option value="" disabled selected>Select Option</option>
                        <option value="t">Yes</option>
                        <option value="f">No</option>
                  </select>
