--- a/veoc/templates/veoc/home_care_follow_up.html
+++ b/veoc/templates/veoc/home_care_follow_up.html
@@ -50,6 +50,8 @@
                             <th>Gender</th>
                             <th>Contact</th>
                             <th>Origin Country</th>
+                            <th>County</th>
+                            <th>Sub County</th>
                             <th>Enrollment Date</th>
                             <th>Reporting Date</th>
                             <th>Follow up Day</th>
@@ -60,8 +62,6 @@
                             <th>Difficulty in breathing?</th>
                             <th>Comments</th>
                             <th>Registered By</th>
-                            <th>County</th>
-                            <th>Sub County</th>
                           </tr>
                           </thead>
                           <tbody>
@@ -80,6 +80,8 @@
                             <td>{{ follow.patient_contacts.sex }}</td>
                             <td>{{ follow.patient_contacts.phone_number }}</td>
                             <td>{{ follow.patient_contacts.origin_country }}</td>
+                              <td>{{ follow.patient_contacts.county.name }}</td>
+                                <td>{{ follow.patient_contacts.subcounty.name }}</td>
                             <td>{{ follow.patient_contacts.date_of_contact|date:'d-m-Y' }}</td>
                             <td>{{ follow.created_at|date:'d-m-Y' }}</td>
                             <td>{{ follow.follow_up_day }}</td>
@@ -118,8 +120,6 @@
                               <td>None</td>
                             {% endif %}
                             <td>{{ follow.patient_contacts.created_by.username }}</td>
-                              <td>{{ follow.patient_contacts.county_id }}</td>
-                                <td>{{ follow.patient_contacts.subcounty_id }}</td>
                           </tr>
                         {% endfor %}
                       </tbody>
